--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,12 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+//    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+//    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
